--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''"
 	},
+	"dependencies": {
+		"js-sha256": "^0.11.1"
+	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^5.2.12",
 		"@sveltejs/kit": "^2.22.0",
