--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"prepare": "svelte-kit sync || echo ''"
 	},
 	"dependencies": {
-		"js-sha256": "^0.11.1"
+		"js-sha256": "^0.11.1",
+		"uuid": "^11.1.0"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^5.2.12",
