--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"prepare": "svelte-kit sync || echo ''"
 	},
 	"dependencies": {
+		"@lucide/svelte": "^0.536.0",
 		"js-sha256": "^0.11.1",
 		"uuid": "^11.1.0"
 	},
